# OS_New

./: README.md
lab1/: CMakeLists.txt  lab1_test.cpp
lab1/include/: parent.h  utils.h
lab1/src/: child1.cpp  child2.cpp  main.cpp  parent.cpp  utils.cpp
lab3/: lab_3.c  main.c  process1.c  process2.c
lab4/: lib1.c  lib2.c  prime_eratosthenes.c  prime_naive.c  program1  program1.c  program2  program2.c  square_rectangle.c  square_triangle.c
